# gitgardiyan

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-06-gitgardiyan.md
docs/superpowers/specs/: 2026-07-06-gitgardiyan-design.md  2026-07-06-proje-ayar-paneli-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  git.rs  lib.rs  log.rs  main.rs  notifier.rs  rules.rs  scheduler.rs  state.rs  tray.rs
ui/: index.html  main.js  notify.html  notify.js  style.css
